# minigl

./: .gitmodules  CMakeLists.txt  README.md
examples/compute/: CMakeLists.txt
examples/compute/res/: compute.glsl
examples/compute/src/: main.cpp
examples/instancing/: CMakeLists.txt
examples/instancing/res/: instances.glsl
examples/instancing/src/: main.cpp
examples/mesh/: CMakeLists.txt
examples/mesh/res/: flat.glsl  mesh.glsl
examples/mesh/src/: main.cpp
examples/min_app/: CMakeLists.txt
examples/min_app/src/: main.cpp
examples/shadows/: CMakeLists.txt
examples/shadows/res/: depth.glsl  shadows.glsl
examples/shadows/src/: main.cpp
examples/ssbo/: CMakeLists.txt
examples/ssbo/res/: compute.glsl  quad.glsl
examples/ssbo/src/: main.cpp
examples/texture/: CMakeLists.txt
examples/texture/res/: texture.glsl
examples/texture/src/: main.cpp
examples/triangle/: CMakeLists.txt
examples/triangle/res/: triangle.glsl
examples/triangle/src/: main.cpp
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/stb_image/: CMakeLists.txt
src/: core.hpp  glose.hpp  glspch.hpp  log.hpp  mglpch.hpp
src/glose/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  color.cpp  color.hpp  geometry.cpp  geometry.hpp  glose.hpp  hello_world.hpp  mesh.cpp  mesh.hpp  render_command.cpp  render_command.hpp  shader.cpp  shader.hpp
src/glose/app/: app.cpp  app.hpp  app_3d.hpp  window.cpp  window.hpp
src/glose/app/input/: input.cpp  input.hpp  key_codes.h  mouse_codes.h
src/minigl/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  color.cpp  color.hpp  commands.cpp  commands.hpp  geometry.cpp  geometry.hpp  mesh.cpp  mesh.hpp  minigl.hpp  render_command.cpp  render_command.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/minigl/app/: app.cpp  app.hpp  app_3d.hpp  camera.cpp  camera.hpp  window.cpp  window.hpp
src/minigl/app/input/: input.cpp  input.hpp
